--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,16 +30,33 @@
   }
 }
 
-.progress {
-  display: inline-block;
-  width: 50%;
-  height: 20px;
-  -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
-  transform: rotate(-90deg);
+.progress-bar-vertical {
+  width: 30px;
+  min-height: 300px;
+  display: flex;
+  align-items: flex-end;
+  margin-right: 20px;
+  float: left;
 }
-.vertical {
-  box-shadow: inset 0px 4px 6px #ccc;
+
+.progress-bar-vertical .progress-bar {
+  width: 100%;
+  height: 0;
+  -webkit-transition: height 0.6s ease;
+  -o-transition: height 0.6s ease;
+  transition: height 0.6s ease;
 }
+
+// .progress {
+//   display: inline-block;
+//   width: 50%;
+//   height: 20px;
+//   -webkit-transform: rotate(-90deg); Chrome, Safari, Opera
+//   transform: rotate(-90deg);
+// }
+// .vertical {
+//   box-shadow: inset 0px 4px 6px #ccc;
+// }
 
 .footer {
     position: fixed;
@@ -57,7 +74,6 @@
         padding-bottom: 10px;
     }
 }
-
 
 // .navbar {
 //   background-color: #157bb2;
