--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -10,7 +10,7 @@
         <%= content_tag(:li, fa_icon("sitemap", text: "A7 Chip with 64-bit architecture")) %>
         <%= content_tag(:li, fa_icon("camera", text: "5MP iSight + FaceTime HD camera")) %>
       </ul>
-      <div>
+      <div style="text-align: right; margin-top: 30px;">
         <button class="btn btn-primary">Add to Cart</button>
       </div>
     </div>
@@ -18,12 +18,23 @@
     <%= image_tag('ipad_retina.jpg', :class => "img-responsive") %>
     </div>
     <div class="col-md-4">
-      <!-- <div class="progress vertical">
+      <div class="progress progress-bar-vertical">
+        <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 70%;">
+          <span class="sr-only">70% Complete</span>
+          70%
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <!-- div class="progress vertical">
         <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
           <span class="sr-only">60% Complete</span>
           60%
         </div>
       </div> -->
-    </div>
   </div>
 </div>
