--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,6 +47,18 @@
   transition: height 0.6s ease;
 }
 
+.progress-bar1 {
+  background: url('ui_ball.png') 0 0 no-repeat;
+  background-repeat: no-repeat;
+  display: block;
+  z-index: 99;
+  position: absolute;
+  width: 63px;
+  height: 63px;
+  left: 0px;
+  top: 53px;
+}
+
 // .progress {
 //   display: inline-block;
 //   width: 50%;
@@ -78,4 +90,15 @@
 // .navbar {
 //   background-color: #157bb2;
 //   color: #fff !important;
+// }
+
+// background: url("ball1.png") 0 0 no-repeat;
+//     background-repeat: no-repeat;
+//     display: block;
+//     width: 65px;
+//     height: 65px;
+//     z-index: 99;
+//     position: absolute;
+//     left: 5px;
+//     top: 29px;
 // }
