--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,17 +24,16 @@
           70%
         </div>
       </div>
+      <span class="progress-bar1"></span>
     </div>
   </div>
 </div>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <!-- div class="progress vertical">
-        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-          <span class="sr-only">60% Complete</span>
-          60%
-        </div>
+
+    <!--   <div class="well">
+
       </div> -->
   </div>
 </div>
