new asset changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -48,7 +48,7 @@
 }
 
 .progress-bar1 {
-  background: url('ui_ball.png') 0 0 no-repeat;
+  background: asset-url('ui_ball.png') 0 0 no-repeat;
   background-repeat: no-repeat;
   display: block;
   z-index: 99;
