--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,29 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="col-md-4">
-      <h4>
+<div class="row" style="margin-top: 30px;">
+  <div class="col-sm-12">
+    <div class="col-sm-8">
+    <%= image_tag('ipad_retina.jpg', :class => "img-responsive") %>
+    </div>
+    <div class="col-sm-4 col-xs-6">
+      <div class="progress progress-bar-vertical">
+        <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 70%;">
+          <span class="sr-only"></span>
+          70%
+        </div>
+      </div>
+      <span class="progress-bar1"></span>
+    </div>
+  </div>
+</div>
+<div class="row" align="center">
+  <div>
+    <button class="btn btn-primary">Add to Cart</button>
+  </div>
+</div>
+
+<div class="row" style="margin-top: 30px; min-height: 300px;">
+  <div class="col-md-6 col-md-offset-3">
+
+    <h4>
         Apple iPad Mini with Retina Display fa-eye
       </h4>
       <ul class="features">
@@ -10,27 +32,6 @@
         <%= content_tag(:li, fa_icon("sitemap", text: "A7 Chip with 64-bit architecture")) %>
         <%= content_tag(:li, fa_icon("camera", text: "5MP iSight + FaceTime HD camera")) %>
       </ul>
-      <div style="text-align: right; margin-top: 30px;">
-        <button class="btn btn-primary">Add to Cart</button>
-      </div>
-    </div>
-    <div class="col-md-4">
-    <%= image_tag('ipad_retina.jpg', :class => "img-responsive") %>
-    </div>
-    <div class="col-md-4">
-      <div class="progress progress-bar-vertical">
-        <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="height: 70%;">
-          <span class="sr-only">70% Complete</span>
-          70%
-        </div>
-      </div>
-      <span class="progress-bar1"></span>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
 
     <!--   <div class="well">
 
