--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -11,6 +11,8 @@
         </div>
       </div>
       <span class="progress-bar1"></span>
+      <span class="top">4,999.99</span>
+      <span class="bottom">3,999.99</span>
     </div>
   </div>
 </div>
